--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hostingrana
 description: ini skrip hosting rana
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-merlot
 
 gems:
   - jekyll-mentions
